[package]
name = "rust_proto"
version = "0.1.0"
authors = ["tkreind <tristankreindler@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.7.0"
prost-types = "0.7.0"
serde = "1.0.125"

[build-dependencies]
prost-build = "0.7.0"
